--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,4 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
+  ,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-3JJ46QQ;Database=FutebolApi;User Id=sa;Password=12345;"
+  }
 }
