--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-3JJ46QQ;Database=FutebolApi;User Id=sa;Password=12345;"
+    "DefaultConnection": "Server=SL-002656.cwinet.local;Database=fixcarv1;User Id=deivd;Password=Api123456789@;"
   }
 }
