--- a/.gitignore
+++ b/.gitignore
@@ -258,6 +258,7 @@ Generated_Code/
 # because we have git ;-)
 _UpgradeReport_Files/
 Backup*/
+!BackupDb/
 UpgradeLog*.XML
 UpgradeLog*.htm
 ServiceFabricBackup/
